@@ -17,6 +17,8 @@ USER LEVEL CHANGES
 -- Modified a variety of warning messages. 
 
 
+-- nimbleModel no longer outputs the names of all uninitialized variables in a model.  Instead, users are directed to use the new $initializeInfo() method if uninitialized variables are detected. 
+
 BUG FIXES
 
 -- Fixed MCMC autoBlocking procedure, to work with new sampler default values system.
